# Translate-Chat

./: .gitignore  CHANGELOG.md  DEPENDENCY_CLEANUP.md  Dockerfile.arm64  Dockerfile.linux  Dockerfile.test  README.md  RELEASE_v1.0.0.md  __init__.py  analyze_package.sh  asr_client.py  audio_capture.py  audio_capture_plyer.py  audio_capture_pyaudio.py  buildozer.spec  config_manager.py  config_template.py  hotwords.py  lang_detect.py  main.py  pyproject.toml  requirements-android.txt  requirements-desktop.txt  requirements.txt  run.sh  runtime_hook.py  setup_config.py  speaker_change_detector.py.disabled  sys_config_app.py  test_build_simple.sh  test_chinese_display.py  test_font_fix.py  translate-chat.spec  translator.py
Translate-Chat/: README.md
docs/: AI static code review.md  android_dev_guide.md  buildozer_fix.md  config_guide.md  linux_android_build_fix.md  linux_desktop_build.md  linux_dev_guide.md  macos_quick_start.md  pyinstaller_compatibility.md  sys_config_ui.md
releases/: RELEASE_NOTES_v1.0.0_arm64.md
scripts/: BUILD_FIX_README.md  BUILD_GUIDE.md  CROSS_PLATFORM_BUILD.md  LOCAL_BUILD_README.md  README.md  SDL2_LOCAL_README.md  VERSION_MANAGER_USAGE.md  auto_push.sh  build_android_macos.sh  build_android_ubuntu.sh  build_cross_platform.sh  build_linux_desktop.sh  build_macos.sh  buildozer.spec  common_build_utils.sh  complete_build_fix.sh  debug_environment.sh  dependency_manager.sh  diagnose_buildozer.sh  download_sdl2_local.sh  fix_android_build.sh  fix_buildozer.sh  fix_linux_build_issues.sh  fix_main_py_issue.sh  fix_pyjnius_issue.sh  linux_dependency_manager.sh  linux_deploy.sh  local_build_linux.sh  local_build_linux_arm64.sh  local_build_macos.sh  macos_cross_build_linux.sh  macos_cross_build_linux_arm64.sh  monitor_build.sh  pyjnius_patch.sh  quick_build.sh  quick_fix_gradlew.sh  restart_build.sh  sdl2_local_manager.sh  sdl2_local_setup.sh  setup_env.bat  (+9 more)
ui/: UI_README.md  font_test.py  main_window.py  main_window_kivy.py  main_window_qt.py  sys_config_window.py  sys_config_window_simple.py
utils/: __init__.py  file_downloader.py  font_utils.py  secure_storage.py
